[tool.poetry]
name = "graphctl"
version = "0.1.0"
description = ""
authors = ["Christo Buschek <christo.buschek@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^0.20.0"
click = "^8.1.3"
tqdm = "^4.64.0"
networkx = "^2.8"
numpy = { version = "^1.26", python = ">=3.9,<3.13"}
matplotlib = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
graphctl = "graphctl:main"
